Remake Account and Authentication flow